Name:                icfp2014
Version:             0.0
Synopsis:            Entry for the 2014 ICFP Programming Contest
Homepage:            https://github.com/jchl/icfp2014
License:             MIT
License-file:        LICENSE
Author:              James Lingard
Maintainer:          james@lingard.com
Bug-reports:         https://github.com/jchl/icfp2014/issues
Cabal-version:       >= 1.8
Build-type:          Simple
Extra-source-files:  README.md

Library
  Hs-source-dirs:    src
  Exposed-modules:   JML, JMLTokens, GCC, GCCSim, Types, JMLCompiler
  Build-depends:     base >= 3 && < 5, array, containers, text, bytestring, time, regex-posix
  Build-tools:       alex, happy
  Ghc-options:       -O2
-- -auto-all
-- Ghc-options:       -Wall

Source-repository head
  Type:              git
  Location:          https://github.com/jchl/icfp2014.git
