Name:                icfp2014
Version:             0.0
Synopsis:            Entry for the 2014 ICFP Programming Contest
Homepage:            https://github.com/jchl/icfp2014
License:             MIT
License-file:        LICENSE
Author:              James Lingard
Maintainer:          james@lingard.com
Bug-reports:         https://github.com/jchl/icfp2014/issues
Cabal-version:       >= 1.8
Build-type:          Simple
Extra-source-files:  README.md

Executable jmlcc
  Hs-source-dirs:    src
  Main-is:           JMLCompilerMain.hs
  Build-depends:     base, containers, mtl, array
  Build-tools:       alex, happy
  Other-modules:     JML, JMLTokens, GCC, Types, JMLCompiler
  Ghc-options:       -O2 -rtsopts -Wall -fno-warn-unused-matches -fno-warn-name-shadowing

Executable gccasm
  Hs-source-dirs:    src
  Main-is:           GCCAsmMain.hs
  Build-depends:     base, containers, mtl
  Other-modules:     GCC
  Ghc-options:       -O2 -rtsopts -Wall -Werror -fno-warn-unused-matches -fno-warn-name-shadowing

Executable gccsim
  Hs-source-dirs:    src
  Main-is:           GCCSimMain.hs
  Build-depends:     base, containers, mtl
  Other-modules:     GCC, GCCSim
  Ghc-options:       -O2 -rtsopts -Wall -Werror -fno-warn-unused-matches -fno-warn-name-shadowing -fno-warn-incomplete-patterns

Source-repository head
  Type:              git
  Location:          https://github.com/jchl/icfp2014.git
